# c-serializer

./: .gitignore  CMakeLists.txt  README.md
inc/: serialize_buffer.h
src/: serialize_buffer.c
tests/: TestNestedStructure.hpp  TestPointerStructure.hpp  TestSimpleStructure.hpp  main.cpp  test_simple_structure.hpp
